--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">nonikers</string>
+    <string name="team_1">Team 1</string>
+    <string name="team_2">Team 2</string>
+    <string name="correct">Correct</string>
+    <string name="skip">Skip</string>
+    <string name="round_1">Round 1: Anything Goes</string>
+    <string name="round_2">Round 2: One word only</string>
+    <string name="round_3">Round 3: Silent! Only Gestures</string>
 </resources>
