--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="round_1">Round 1: Anything Goes</string>
     <string name="round_2">Round 2: One word only</string>
     <string name="round_3">Round 3: Silent! Only Gestures</string>
+    <string name="done">done</string>
 </resources>
